CLOUDP-60479: wip